BUG#26976 - Missing table in merge not noted in related error msg +             SHOW CREATE TABLE fails

After merge fixes.